--- a/charts/acme/templates/acme-deployment.yaml
+++ b/charts/acme/templates/acme-deployment.yaml
@@ -11,6 +11,7 @@ spec:
     metadata:
       labels:
         name: {{ .Release.Name }}-acme-deploy
+        hello: {{ .Values.hello }}
     spec:
       containers:
         - name: nginx
